opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire"
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/mirage/ezjsonm"
doc: "https://mirage.github.io/ezjsonm"
bug-reports: "https://github.com/mirage/ezjsonm/issues"
depends: [
  "ocaml"
  "ezjsonm"
  "dune" {build & >= "1.0"}
  "alcotest" {with-test & >= "0.4.0"}
  "jsonm" {>= "0.9.1"}
  "sexplib"
  "hex"
  "lwt" {>= "2.5.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/ezjsonm.git"
synopsis: "Simple Lwt-based interface to the Jsonm JSON library"
description: """
This simple interface over the Jsonm library provides an
Lwt variant of the serialisation functions.
"""
