opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire"
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/mirage/ezjsonm"
doc: "https://mirage.github.io/ezjsonm"
bug-reports: "https://github.com/mirage/ezjsonm/issues"
depends: [
  "ocaml"
  "ezjsonm" {=version}
  "dune" {>= "2.0"}
  "alcotest" {with-test & >= "1.2.0"}
  "ppx_sexp_conv" {with-test & >= "v0.12.0"}
  "jsonm" {>= "1.0.0"}
  "sexplib"
  "hex"
  "lwt" {>= "2.5.0"}
  "conf-npm" {with-test}
  "js_of_ocaml-compiler" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/ezjsonm.git"
synopsis: "Simple Lwt-based interface to the Jsonm JSON library"
description: """
This simple interface over the Jsonm library provides an
Lwt variant of the serialisation functions.
"""
