opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire"
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/mirage/ezjsonm"
doc: "https://mirage.github.io/ezjsonm/"
bug-reports: "https://github.com/mirage/ezjsonm/issues"
depends: [
  "ocaml" {>="4.08.0"}
  "dune" {>= "2.0"}
  "alcotest" {with-test & >= "1.5.0"}
  "jsonm" {>= "1.0.0"}
  "uutf"
  "js_of_ocaml-compiler" {with-test}
  "conf-npm" {with-test}
  "sexplib0"
  "hex"
  "base" {>= "v0.13.0" }
  "cstruct" {>= "3.1.0" }
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/ezjsonm.git"
synopsis: "Simple interface on top of the Jsonm JSON library"
description: """
Ezjsonm provides more convenient (but far less flexible)
input and output functions that go to and from `string` values.
This avoids the need to write signal code, which is useful for
quick scripts that manipulate JSON.

More advanced users should go straight to the Jsonm library and
use it directly, rather than be saddled with the Ezjsonm interface.
"""
